# CAENET

./: obudowa3.FCStd
kicad/: fp-info-cache  kicad.kicad_pcb  kicad.kicad_pro  kicad.kicad_sch  ~kicad.kicad_sch.lck
kicad/Gerber/: kicad-B_Cu.gbl  kicad-B_Mask.gbs  kicad-B_Paste.gbp  kicad-B_Silkscreen.gbo  kicad-Edge_Cuts.gm1  kicad-F_Cu.gtl  kicad-F_Mask.gts  kicad-F_Paste.gtp  kicad-F_Silkscreen.gto  kicad-NPTH-drl_map.gbr  kicad-NPTH.drl  kicad-PTH-drl_map.gbr  kicad-PTH.drl
project/: CMakeLists.txt  caenet.c  send.pio
